2005-12-09  Adam Jocksch  <ajocksch@redhat.com>

	* frysk/dom/DOMInlineInstance (hasParentInlineInstance): Added.
	(getPreviousInstance): Added.
	

	* frysk/dom/DOMFunction.java (getSource): Added.
	(getSourceName): Removed, should now get name through the DOMSource
	returned by getSource.

2005-12-08  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.am (GEN_CLASSPATH): Added jdom.
	(GEN_GCJ_LDADD): Ditto.
	* frysk/dom: Moved from frysk-gui/frysk/gui/srcwin.

2005-11-28  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (ANTLR): Use $(JAVA).

	* configure.ac (AC_INIT): Shorten package to just <<frysk>>.

	* autogen.sh: Add -f to autoconf.

	* Makefile.am (ANTLR): Define.  Do not include
	frysk/expr/Makefile.inc
	(EXTRA_DIST): Delete frysk/expr/cpp.g and frysk/expr/*.sed.

	* Makefile.am (EXTRA_DIST): Do not add .fig files, handled by
	Makefile.gen.sh.

2005-11-22  Andrew Cagney  <cagney@redhat.com>

	* configure.ac: Include common/version.ac.  Update AC_INIT to
	frysk-core FRYSK_VERSION.

2005-11-21  Stan Cox  <scox@redhat.com>

	* frysk/Config.javain: Moved to frysk-imports/frysk.

2005-11-15  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Add libfrysk-jargs.a.

2005-11-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_CLASSPATH): Delete GEN_CLASSDIR references.
	(GEN_SOURCEPATH): Add path to frysk-imports.
	
	* Makefile.am (GEN_GCJ_LDADD): Add frysk- prefix to libraries.

2005-11-03  Igor Foox  <ifoox@redhat.com>

	* autogen.sh: Added -I common/m4 to aclocal invokation.

2005-10-28  Tarun Khanna  <tkhanna@redhat.com>

	* Makefile.am: Added DejaGNU --tool option to the RUNTESTDEFAULTFLAGS

2005-10-18  Igor Foox  <ifoox@redhat.com>

	* Makefile.am: Appended all .fig/png files as well as frysk/expr/cpp.g and
	frysk/expr/*.sed to the EXTRA_DIST variable so that they are added to the
	distribution.
	
2005-10-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Re-order GEN_CLASSPATH and GEN_GCJ_LDADD so that