@@ -1,3 +1,7 @@
+2006-01-06  Rick Moseley  <rmoseley@redhat.com>
+
+	* frysk/dom/TestDOM.java: new for junit testing
+
 2005-12-09  Adam Jocksch  <ajocksch@redhat.com>
 
 	* frysk/dom/DOMInlineInstance (hasParentInlineInstance): Added.
